@@ -51,6 +51,7 @@ dependencies {
 
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
+	testImplementation("io.mockk:mockk:1.13.7")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 	runtimeOnly("com.mysql:mysql-connector-j")
 }
@@ -70,5 +71,8 @@ allOpen {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
-	jvmArgs("-Xshare:off")
+	jvmArgs(
+		"-XX:+EnableDynamicAgentLoading",
+		"-Xshare:off"
+		)
 }
